src/layout/Map/MapComponent.module.css
.label {
  width: 100%;
}

.map {
  position: relative;
  height: 40rem;
}

/* We do not want the map to look faded in PDF, so using @media only screen */
@media only screen {
  .map-read-only :global(.leaflet-tile-pane) {
    opacity: 0.5;
  }
}

/* In PDF we should show attribution with hyperlinks printed out */
@media print {
  .map div:has(> :global(.leaflet-control-attribution)) {
    width: 100%;
  }
  .map :global(.leaflet-control-attribution) {
    background: white;
    width: 100%;
    padding: 0;
    text-align: center;
  }

  .map :global(.leaflet-control-attribution) a {
    color: black;
  }

  .map :global(.leaflet-control-attribution) a[href]:after {
    content: ' [' attr(href) ']';
  }
}

.map-error {
  border-color: var(--fds-semantic-border-danger-default);
  border-width: 2px;
  border-style: solid;
}

.footer {
  padding-top: 12px;
}

.empty-field {
  font-style: italic;
  font-size: 1rem;
  line-height: 1.6875;
}

